# Fast_Blog

./: README.md  dockerfile  pyproject.toml  readme.md  settings.toml
.fleet/: run.json
scripts/: clean_docker.sh  run_docker.sh  run_local.sh
src/backend/: alembic.ini  dependencies.py  main.py  models.py  pyproject.toml  routes.py  schemas.py  settings.toml  utils.py
src/backend/database/: blog.db  crud.py  database.py
src/backend/database/crud/: posts.py  user.py
src/backend/migrations/versions/: 0c00295e7f47_add_create_and_update_date.py  a3bfc3f64cae_pereriera_like_column.py  dc99156466ae_create_posts_table.py
src/backend/routers/: posts.py  users.py
src/fast_pico_vue_blog/: main.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.vue  Header.vue  api.ts  main.js
src/frontend/src/pages/: Home.vue  WritePost.vue
src/frontend/src/pages/components/: Footer.vue  Header.vue  Post.vue  PostForms.vue
