[tool.poetry]
name = "fast-pico-vue-blog"
version = "0.1.0"
description = ""
authors = ["jrporto <joao6roberto@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0.post1"
alembic = "^1.13.1"
dynaconf = "^3.2.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
